compiler/test/fail_compilation/fix21167.d
void f(int, int, int){}

void main()
{
	f(
		1,
		"foo",
		3
	);

}
